--- a/4_overall_methodology/0_index.tex
+++ b/4_overall_methodology/0_index.tex
@@ -21,7 +21,7 @@ Historical methodology, as I see it, is a product of common sense applied to cir
 
 %------------------------------------------------------------------------- 
 
-En este capítulo se propone un método para la evaluación de competencias genéricas de los estudiantes a partir de su actividad en los entornos de aprendizaje basado en el diseño (DBR). El capítulo comienza con una introducción para sentar las bases del método. En segundo lugar, se describen las características que debe cumplir un método de este tipo son satisfechas. Y en último lugar, se introduce la técnica que se empleará para la implementación del método.
+En este capítulo se propone un método para la evaluación de competencias genéricas de los estudiantes a partir de su actividad en los entornos de aprendizaje basado en el diseño de evaluaciones. El capítulo comienza con una introducción, seguida de una descripción detallada del método. En tercer lugar, se describen los requisitos que el método ha de satisfacer. A continuación, se describen las características de una propuesta basada en el diseño (DBR) que son satisfechas por el método. Y en último lugar, se introduce la técnica que se empleará para su implementación.
 
 \section{Introducción}
 
@@ -31,16 +31,14 @@ En el VLE por ejemplo, los estudiantes pasan a diario por sus páginas. Por un l
 
 Todas las acciones de los estudiantes quedan almacenadas en el registro de las actividades de aprendizaje, y estos registros podrían ser analizados para comprender el proceso de aprendizaje que se está desarrollando. El \emph{learning analytics} es un área de investigación del aprendizaje mejorado por la tecnología (TEL, del inglés \emph{Technology Enhanced Learning}) que está enfocado en el desarrollo de métodos para analizar y detectar patrones en los datos recogidos en los entornos educativos y aprovecharlos para mejorar el aprendizaje~\cite{chatti2014learning}.
 
-En esta tesis se propone un método de evaluaciones basado en el diseño DBA (\emph{Design-Based Assessment}). Un método que tiene su origen en la investigación basado en el diseño (DBR) y que consiste en el diseño de evaluaciones a partir de la actividad de los estudiantes registrada en los entornos de aprendizaje. Los profesores podrán diseñar evaluaciones a partir de los indicadores obtenidos de los registros de actividad y utilizar estas evaluaciones como evidencias del desempeño de competencias genéricas. Estas evaluaciones podrán ser refinadas por el mismo profesor hasta llegar a unas evidencias que sean válidas para el profesor. También podran ser utilizadas y modificadas por otros profesores que busquen adaptarlo a su contexto local o a las competencias que ellos quieren realizar. 
-
-A continuación se detallarán aquellas características de los métodos DBR que son satisfechas por este método.
+En esta tesis se propone un método de evaluación de competencias genéricas basado en el diseño de evaluaciones (DBA, \emph{Design-Based Assessment}). El método DBA tiene su origen en la investigación basado en el diseño (DBR) y consiste en diseñar evaluaciones a partir de la actividad de los estudiantes registrada en los entornos de aprendizaje. Los profesores podrán diseñar evaluaciones utilizando los indicadores obtenidos de los registros de actividad y podrán utilizar estas evaluaciones como evidencias del desempeño de competencias genéricas. Estas evaluaciones podrán ser refinadas por el mismo profesor hasta llegar a unas evidencias que sean válidas para el profesor. También podrán ser utilizadas y modificadas por otros profesores que busquen adaptarlo a su contexto local o a las competencias que ellos quieren realizar. 
 
 % ---- Comentarios ----------
 % Hay que hablar en capítulos anteriores de registros en actividades de aprendizaje y no en el VLE
 % Porque aquí las actividades de aprendizaje son 3: wiki, VLE y WV.
 
 
-\section{Método: Ciclo de contraste de hipótesis}
+\section{Método: design-based assessment (DBA)}
 
 \subsection{Contexto}
 
@@ -48,7 +46,7 @@ Los estudiantes comienzan a dejar constancia de su actividad en los entornos vir
 
 Los programas de las asignaturas incluyen las competencias genéricas de las que los estudiantes deben ser evaluados. Los profesores pueden plantear actividades en los entornos virtuales con la intención no sólo de evaluar ciertas habilidades de los estudiantes, sino también de provocar comportamientos en los estudiantes y ver cómo afrontan ciertas situaciones. El fin de conocer el modo de proceder de los estudiantes es encontrar patrones de comportamiento que puedan ser interpretados como un indicador del desempeño de alguna competencia genérica.
 
-Para evaluar una competencia genérica dada, el profesor podrá diseñar una evaluación a partir de la información relativa a los registros de los entornos de aprendizaje. Aquí comienza el  \emph{ciclo de contraste de hipótesis}. 
+Para evaluar una competencia genérica dada, el profesor podrá diseñar una evaluación a partir de la información relativa a los registros de los entornos de aprendizaje. Aquí comienza un \emph{ciclo de contraste de hipótesis}. 
 
 %Ese diseño será procesado por el sistema que implementa el método y que terminará devolviendo la información al profesor. El resultado de aplicar el diseño será un indicador que el profesor podrá utilizar para la evaluación de la competencia genérica.
 
@@ -58,7 +56,7 @@ Para evaluar una competencia genérica dada, el profesor podrá diseñar una eva
 
 \subsection{Descripción del método}
 
-El método para la evaluación de competencias genéricas a partir de los registros de las actividades de aprendizaje se basa en el \emph{ciclo de contraste de hipótesis}. Este ciclo consta de una serie de pasos que se muestran en la figura~\ref{fig:CCHDiagram} y se explican a continuación:
+El método DBA para la evaluación de competencias genéricas se basa en el diseño de evaluaciones a partir de los registros de las actividades de aprendizaje, y se integra en un \emph{ciclo de contraste de hipótesis}. Este ciclo consta de una serie de pasos que se muestran en la figura~\ref{fig:CCHDiagram} y se explican a continuación:
 
 \begin{figure}
   \begin{center}
@@ -75,38 +73,57 @@ El método para la evaluación de competencias genéricas a partir de los regist
 \item \emph{Validación de resultados}: la herramienta pondrá a disposición del profesor los indicadores requeridos (d). El profesor los analizará (e) y evaluará si son válidos para el propósito que fueron diseñados (f), si necesitan ser refinados o si hay que descartarlos. En este caso, podrá volver al segundo punto y rediseñar una nueva evaluación (g).
 \end{enumerate}
 
-\section{Características}
+\section{Requisitos y características}
 
-Con respecto a la clasificación de métodos de evaluación mostrada en la sección~\ref{sec:methods}, el método para la evaluación de competencias genéricas basado en el \emph{ciclo de contraste de hipótesis} es un método de \emph{evaluación formativo}, ya que permite mejorar el aprendizaje mientras este tiene lugar proporcionando información de manera sistemática y tan continua como el profesor desee sobre el proceso de aprendizaje.
+El método DBA para la evaluación de competencias genéricas es un método DBR. Aunque desde el punto de vista del estudiante y considerando la clasificación de métodos de evaluación mostrada en la sección~\ref{sec:methods} diríamos que es un método \emph{evaluación formativo}, ya que permite mejorar el aprendizaje mientras este tiene lugar proporcionando información de manera sistemática y continua. Sin embargo, lo consideramos un método DBR ya que no mejora únicamente la acción del alumno, sino que también es un método de investigación que mejora la acción del profesor.
 
 Mientras que con respecto a la clasificación de técnicas de evaluación mostrada en la sección~\ref{sec:techniques}, la técnica empleada en este método es la de obtención de \emph{indicadores del trabajo en actividades de aprendizaje}.
 
+\subsection{Requisitos}
+
 El método debe cumplir una serie de requisitos que parten de los inconvenientes encontrados en la revisión de la literatura realizada en el capítulo \ref{cha:State of the Art} y que han sido resumidos en el capítulo \ref{cha:Problemas}. A continuación se describe cada uno de estos requisitos.
 
-\paragraph*{Indicadores objetivos}
+\paragraph*{1. Indicadores objetivos}
 
 Los indicadores reflejan los datos obtenidos directamente del registro de las actividades de aprendizaje, por lo que serán objetivos per sé. No ha lugar a consideraciones personales o interpretaciones inexactas de rúbricas cómo ocurría en la autoevaluación o evaluación entre iguales, dónde dos evaluaciones de un mismo trabajo realizadas por personas diferentes podrían tener calificaciones diferentes. En el caso de los indicadores obtenidos del registro de las actividades aprendizaje, dos estudiantes que tienen los mismos datos en el registro tendrán en el mismo valor en el indicador, y ya será decisión del profesor la interpretación del indicador.
 
-\paragraph*{Evaluación escalable}
+\paragraph*{2. Evaluación escalable}
 
 El método para la evaluación de competencias genéricas es escalable y no supone al profesor un esfuerzo que éste no pueda abordar. El método se implementa en una herramienta que se alinea con las actividades aprendizaje, el profesor puede consultar los indicadores del registro con una simple interacción con la herramienta, esta procesa la petición y la información es devuelta en formatos que el profesor puede visionar y exportar a otras herramientas.
 
-\paragraph*{Propósito general}
+\paragraph*{3. Propósito general}
 
 El propósito del método es obtener indicadores del registro de las actividades de aprendizaje y que estos sean utilizados para evaluar competencias genéricas. Pero no están orientados a una competencia genérica concreta, sino que es el profesor quien diseña sus actividades en el entorno virtual y el que luego obtiene los indicadores para después utilizarlos en la evaluación de la competencia genérica que considera que los estudiantes han desempeñado en dicha tarea (y que queda reflejada en los indicadores). El profesor podría incluso utilizar los indicadores para evaluar competencias específicas si lo creyese oportuno. Pero en ningún caso este método tendrá como propósito una competencia y actividad concreta como ocurría, por ejemplo, con algunos juegos serios recogidos en el estado del arte.
 
-\paragraph*{Coste asumible}
+\paragraph*{4. Accesibilidad}
 
-Las herramientas que implementan el método se distribuyen como software libre, por lo que están disponibles en internet a disposición del profesor que la quiera utilizar. Además, no es necesario que el profesor tenga un perfil informático u otro específico para poder realizar las peticiones de los indicadores, ni que contrate a un equipo de expertos para obtener los indicadores. La interfaz en la que se implemente el método es usable y sencilla para que los profesores puedan utilizarla sin requerirles conocimientos técnicos, y los formatos a los que se exporta la información son figuras y documentos en formatos transportables a cualquier hoja de cálculo.
+No es necesario que el profesor tenga un perfil informático u otro específico para poder realizar las peticiones de los indicadores, ni que contrate a un equipo de expertos para obtener los indicadores. La interfaz en la que se implemente el método es usable y sencilla para que los profesores puedan utilizarla sin requerirles conocimientos técnicos, y los formatos a los que se exporta la información son figuras y documentos en formatos transportables a cualquier hoja de cálculo.
 
-\paragraph*{Diseño de evaluaciones}
+\paragraph*{5. Diseño de evaluaciones}
 
-La herramienta proporciona al profesor la posibilidad de diseñar sus propias evaluaciones a partir de los indicadores. En el estado del arte nos encontramos con trabajos que obtenían sus evaluaciones a partir de los indicadores del VLE, pero éstos eran fijos. Es decir, cada competencia se evaluaba con un indicador dado. Pero podía ocurrir que el profesor no utilizase las actividades del VLE que proporcionaban dichos indicadores o que utilizase las actividades con un enfoque diferente. Con este método el profesor es quién diseña sus indicadores, y por tanto, sus evaluaciones a partir de los registros de las actividades de aprendizaje.
+La herramienta proporciona al profesor la posibilidad de diseñar sus propias evaluaciones a partir de los indicadores. En el estado del arte nos encontramos con trabajos que obtenían sus evaluaciones a partir de los indicadores del VLE, pero éstos eran fijos. Es decir, cada competencia se evaluaba con un indicador dado. Pero podía ocurrir que el profesor no utilizase las actividades del VLE que proporcionaban dichos indicadores o que plantease las actividades con un enfoque diferente al que realmente tienen. Por ejemplo, uno de los puntos fueres de un wiki es que favorecen el trabajo colaborativo, y podríamos encontrar herramientas que nos ayuden a valorar el trabajo en equipo de los estudiantes que participan en una página de un wiki mediante indicadores del trabajo colaborativo. Si un profesor plantea actividades en el wiki de manera que cada estudiante trabaje indiv en un página, podrá valorar otras compentencias, pero el trabajo en equipo no. Con este método el profesor es quién diseña sus indicadores, y por tanto, sus evaluaciones a partir de los registros de las actividades de aprendizaje.
 %  También podría ocurrir que quisiera combinar el resultado de un indicador con otro para obtener lo que él considerará un indicador válido de la competencia.
 
-\paragraph*{Conclusiones}
+%\paragraph*{Conclusiones}
 
 En resumen, podemos decir que el método que se propone para evaluar competencias genéricas a partir de los registros de interacción de las actividades de aprendizaje se pone a disposición del profesor en forma de una herramienta informática que se conecta a la actividad de aprendizaje utilizado en la asignatura. Mediante esta herramienta, los profesores pueden diseñar evaluaciones a partir de indicadores objetivos obtenidos del VLE y aplicarlos a las competencias genéricas para las que ellos consideren que les son válidos.
+
+
+\subsection{Características}
+
+En el apartado~\ref{sec:dbr} se indican, partiendo del análisis realizado por Terry Andersen y Julie Shattuck~\cite{anderson2012design}, las características que un estudio DBR de calidad debe tener. A continuación se identificará nuestro método DBA en cada una de esas características:
+
+\begin{itemize}
+\item \emph{Contexto educativo real}: el método DBA puede aplicarse en contexto educativos reales. De hecho, el método ya ha sido utilizado en diferentes asignaturas de la Universidad de Cádiz y los resultados de la investigación han sido publicados en revistras y congresos del área de las TEL~\cite{Balderas:2012,Balderas:2013,balderas2013generative,Balderas:2015,balderas2015domain}.
+\item \emph{Enfocado en el diseño y prueba de una intervención significativa}: La intervención se diseña específicamente para solventar un problema, en este caso la evaluación de competencias genéricas. Y dentro de los tipos de intervenciones que define el autor uno de ellos es \emph{tipo de evaluación}, que es donde encaja el método DBA.
+%\item \emph{Empleo de métodos mixtos}: las intervenciones DBR implican la aplicación conjunta de diferentes métodos mediante el empleo de una variedad de herramientas y técnicas de investigación. Los investigadores eligen, utilizan y combinan unos métodos u otros en función de sus necesidades.
+
+\item \emph{Múltiples iteraciones}: la práctica del diseño suele implicar la creación y prueba de prototipos, refinamiento iterativo y la continua evolución del diseño, de la misma forma que ocurre en otros conocidos procesos de diseño como son, por ejemplo, la fabricación de coches o la moda.
+\item \emph{Asociación colaborativa entre investigadores y profesores}: por una lado, los profesores suelen estar demasiado ocupados y no tienen experiencia para dirigir una investigación rigurosa. Por otro lado, los investigadores suelen carecer de conocimiento de la complejidad cultural, de la tecnología, de los objetivos y de las políticas de un sistema educativo que les permita crear y medir eficientemente el impacto de una intervención. Por tanto, se requiere una asocación para el estudio.
+\item \emph{Evolución de los principios de diseño}: El diseño evoluciona desde y hacia la elaboración de principios de diseño, patrones y teorías funcionales. Estos principios no son diseñados para crear principios o teorías que tengan el mismo efecto en cualquier contexto, sino que sirven para ayudarnos en la comprensión del contexto y la intervención, y nos ayuden para ajustar ambos y así maximizar el aprendizaje.  El desarrollo de principios de diseño prácticos es una parte fundamental del DBR, y pone en desventaja a aquellos tipos de investigación que unilateralmente comienzan con las pruebas en clase y después desaparecen con el investigador una vez que el experimento ha concluido.
+\item \emph{Comparación con la investigación-acción}: Tanto los profesores como los investigadores encuentran a menudo confuso diferenciar entre DBR e investigación-acción. Sin embargo, aunque ambas metodologías se sitúan dentro del campo de la investigación aplicada, difieren en características principales. Mientras que la investigación-acción se concibe principalmente para alcanzar una serie de objetivos a nivel local, en DBR se pretende también evolucionar a nivel teórico, maximizando la generalización y el entendimiento en la comprensión de aplicaciones prácticas. Además, la investigación-acción es llevada a cabo normalmente por un solo profesor, por lo que no se beneficia de la experiencia y la energía que caracterizan a los equipos de investigación y diseño DBR.
+\item \emph{Impacto práctico en las prácticas}: El DBR no debe avanzar únicamente en el campo teórico, sino que para demostrar y justificar su valor real deberá ser además implementado en un contexto de estudio local.
+\end{itemize}
 
 % La evaluación de las 3 herramientas se corresponde al capítulo siguiente.
 
