--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1241,6 +1241,15 @@ author = "Leslie Borjas De Xena"
   publisher={Springer}
 }
 
+@inproceedings{balderas2015domain,
+  title={A domain specific language to retrieve objective indicators for foreign language learning in virtual worlds},
+  author={Balderas, Antonio and Berns, Anke and Palomo-Duarte, Manuel and Dodero, Juan M and G{\'o}mez-S{\'a}nchez, Ra{\'u}l and Ruiz-Rube, Iv{\'a}n},
+  booktitle={Proceedings of the 3rd International Conference on Technological Ecosystems for Enhancing Multiculturality},
+  pages={675--680},
+  year={2015},
+  organization={ACM}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
