--- a/1_introduction/1_motivation.tex
+++ b/1_introduction/1_motivation.tex
@@ -22,6 +22,7 @@ Para que la empleabilidad de los nuevos graduados satisfaga las necesidades del 
 Por tanto, en lo que a la evaluación se refiere, podemos decir que el foco de interés se centra ahora en cómo evaluar a los estudiantes en el desempeño de sus competencias. Proyectos como el \emph{Tuning Educational Structures in Europe}, apoyado por el Lifelong Learning Program de la Unión Europea, muestran la importancia de utilizar el concepto de competencia como base para los resultados de aprendizaje. Las competencias de aprendizaje son habilidades que un alumno ha de ser capaz de demostrar una vez que termina su formación. Estas competencias de aprendizaje se dividen en dos grupos: específicas y genéricas. Competencias específicas son aquellas relacionadas directamente con la utilización de conceptos, teorías o habilidades propias de un área en concreto, mientras que las competencias genéricas son habilidades, capacidades y conocimientos que cualquier estudiante debería desarrollar independientemente de su área de estudio \cite{gonzalez2003tuning}. Aunque obviamente sigue siendo muy importante el desarrollo del conocimiento específico de cada área de estudio, es un hecho que el tiempo y la atención también deben dedicarse al desarrollo de las competencias genéricas. Igualmente es importante reconocer la aplicación de dichas habilidades genéricas fuera del ámbito académico, ya que son cada vez más relevantes para la preparación de estudiantes para su futuro papel en la sociedad, en términos de empleabilidad y ciudadanía.
 
 \subsection*{La educación como una ciencia de diseño}
+\label{sec:dbr}
 
 Sin embargo, evaluar ciertas competencias genéricas es a menudo una tarea subjetiva. A menos que una competencia genérica esté directamente enlazada a una actividad específica, su evaluación requiere de la inventiva y originalidad del profesor para ser capaz, por un lado, de diseñar actividades que obliguen al estudiante a desempeñar las competencias que se quieren evaluar, y por otro lado, diseñar evaluaciones que midan el desempeño real del estudiante en dicha competencia. Comienza Diana Laurillard en su libro \emph{Teaching as a Design Science (La enseñanza como una ciencia de diseño)}~\cite{laurillard2012teaching} comparando la enseñanza con el arte. En ambas, tanto el artista como el profesor han de inspirar y entusiasmar a su audiencia. Los profesores tienen que lograr conectar con sus estudiantes y engancharlos con la temática de estudio. Pero al contrario de lo que ocurre en el arte, donde prácticamente "todo vale'', en la enseñanza hay que ceñirse a una serie de objetivos formales previamente definidos. La enseñanza no es una ciencia teórica que describe y explica algunos aspectos del mundo social y natural, sino una más cercana a otro tipo de ciencias tales como la ingenieria, la informática o la arquitectura, cuyo objetivo es hacer un mundo mejor, es decir, una \emph{ciencia del diseño}. En la ciencia del diseño se parte de la teoría, pero se construyen principios de diseño en lugar de nuevas teorías y se utilizan métodos prácticos en lugar de explicaciones. Su objetivo es ir mejorando con la práctica, basándose en principios y construyendo sobre el trabajo de otros.
 
