--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1250,6 +1250,35 @@ author = "Leslie Borjas De Xena"
   organization={ACM}
 }
 
+@article{conde2015exploring,
+  title={Exploring Software Engineering Subjects by Using Visual Learning Analytics Techniques},
+  author={Conde, Miguel A and Garcia-Penalvo, Francisco J and Gomez-Aguilar, Diego-Alonso and Theron, Roberto},
+  journal={Tecnologias del Aprendizaje, IEEE Revista Iberoamericana de},
+  volume={10},
+  number={4},
+  pages={242--252},
+  year={2015},
+  publisher={IEEE}
+}
+
+@article{de2010project,
+  title={Project--based learning in engineering higher education: two decades of teaching competences in real environments},
+  author={de Los Rios, Ignacio and Cazorla, Adolfo and D{\'\i}az-Puente, Jos{\'e} M and Yag{\"u}e, Jos{\'e} L},
+  journal={Procedia-Social and Behavioral Sciences},
+  volume={2},
+  number={2},
+  pages={1368--1378},
+  year={2010},
+  publisher={Elsevier}
+}
+
+@article{midoro2013guidelines,
+  title={Guidelines on adaptation of the UNESCO ICT Competency Framework for Teachers},
+  author={Midoro, Vittorio},
+  year={2013},
+  publisher={UNESCO Institute for Information Technologies in Education}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
