--- a/1_introduction/1_motivation.tex
+++ b/1_introduction/1_motivation.tex
@@ -7,44 +7,33 @@
 \section{Motivación}
 \label{sec:Motivation}
 
-\subsection*{Las TIC en la educación}
-
-En los últimos años, han sido numerosos los avances en lo que al uso de las \emph{Tecnologías de la Información y la Comunicación} (TIC) se refiere. Esto, junto con el asentamiento de internet, ha traido consigo que la sociedad se haya visto obligada a abordar cambios en su habitual modus operandi. Desde la manera en que los ciudadanos interactúan con las instituciones públicas hasta la forma en que estos se relacionan con sus amigos. Y por supuesto, también ha afectado a la educación. El aprendizaje mejorado por la tecnología (TEL, del inglés \emph{Technology Enhanced Learning}), es el campo de investigación que aborda el uso de la tecnología como parte del proceso de aprendizaje. Herramientas como los cursos virtuales, los wikis o los mundos virtuales son más que habituales como soporte a la docencia presencial, y en algunos casos, como ocurre con los cursos online masivos y abiertos (\emph{MOOCs}, del inglés \emph{Massive Open Online Courses}), es el único punto de encuentro entre el estudiante y el profesor.
-
-En todas estas herramientas que se utilizan como apoyo a la docencia, la actividad de los estudiantes queda siempre registrada, es decir, accesos al sistema, envío de tareas, comentarios en foros, ... etc. Según \cite{Chebil:2012, Florian:2011} la recopilación de los rastros de interacción producidos por este tipo de herramientas, con un filtrado adecuado, podría ser una información muy valiosa para obtener indicadores del desempeño de los estudiantes en ciertas competencias. Cómo interactúan, cuándo lo hacen o con qué frecuencia consultan los recursos son cuestiones cuyas respuestas podrian utilizarse como indicadores de algunas competencias.
-
 \subsection*{Las competencias genéricas en el marco actual}
 
 El papel de la universidad como institución impulsora de los cambios de todo tipo a los que la sociedad actual debe hacer frente es fundamental. En el contexto del Espacio Europeo de Educación Superior~\footnote{http://www.eees.es/} e influenciado por la situación actual de  la sociedad, sus instituciones sociales y políticas, la universidad se encuentra en el foco de las reformas para alcanzar la convergencia a nivel europeo. En este marco, son las competencias, las tareas y su evaluación los pilares en los que se basa el nuevo currículum universitario~\cite{zabala2005espacio}.
 
-Para que la empleabilidad de los nuevos graduados satisfaga las necesidades del mercado laboral europeo, las competencias juegan un papel fundamental~\cite{communique2012making}. Los nuevos graduados deben adquirir y demostrar competencias, además de dominar el conocimiento específico de la materia.
+Para que la empleabilidad de los nuevos graduados satisfaga las necesidades del mercado laboral europeo, las competencias juegan un papel fundamental~\cite{communique2012making}. Las aptitudes y habilidades que la sociedad demandará a los futuros profesionales constituyen pilares básicos a tener en cuenta en el diseño de las estrategias educativas~\cite{de2010project}. Los nuevos graduados deben adquirir y demostrar competencias, además de dominar el conocimiento específico de la materia.
 
 Por tanto, en lo que a la evaluación se refiere, podemos decir que el foco de interés se centra ahora en cómo evaluar a los estudiantes en el desempeño de sus competencias. Proyectos como el \emph{Tuning Educational Structures in Europe}, apoyado por el Lifelong Learning Program de la Unión Europea, muestran la importancia de utilizar el concepto de competencia como base para los resultados de aprendizaje. Las competencias de aprendizaje son habilidades que un alumno ha de ser capaz de demostrar una vez que termina su formación. Estas competencias de aprendizaje se dividen en dos grupos: específicas y genéricas. Competencias específicas son aquellas relacionadas directamente con la utilización de conceptos, teorías o habilidades propias de un área en concreto, mientras que las competencias genéricas son habilidades, capacidades y conocimientos que cualquier estudiante debería desarrollar independientemente de su área de estudio \cite{gonzalez2003tuning}. Aunque obviamente sigue siendo muy importante el desarrollo del conocimiento específico de cada área de estudio, es un hecho que el tiempo y la atención también deben dedicarse al desarrollo de las competencias genéricas. Igualmente es importante reconocer la aplicación de dichas habilidades genéricas fuera del ámbito académico, ya que son cada vez más relevantes para la preparación de estudiantes para su futuro papel en la sociedad, en términos de empleabilidad y ciudadanía.
+
+\subsection*{Las TIC en la educación}
+
+En los últimos años, han sido numerosos los avances en lo que al uso de las \emph{Tecnologías de la Información y la Comunicación} (TIC) se refiere. Esto, junto con el asentamiento de internet, ha traido consigo que la sociedad se haya visto obligada a abordar cambios en su habitual modus operandi. Desde la manera en que los ciudadanos interactúan con las instituciones públicas hasta la forma en que estos se relacionan con sus amigos. Y por supuesto, también ha afectado a la educación. El campo de investigación que aborda el uso de la tecnología como parte del proceso de aprendizaje es el \emph{aprendizaje mejorado por la tecnología} (TEL, del inglés \emph{Technology Enhanced Learning}).
+
+Según la UNESCO, es preciso que los docentes reciban los instrumentos necesarios para alcanzar los objetivos sociales y económicos que constituyen el eje de todo sistema educativo nacional. Para ello, se ha creado un conjunto de baremos internacionales que definen las competencias necesarias para impartir una enseñanza eficaz mediante el uso de las TIC: El Marco de competencias de los docentes en materia de TIC de la UNESCO~\cite{midoro2013guidelines}. Este marco tiene por objeto informar de la función de las TIC en la reforma educativa, así como ayudar a los Estados Miembros a que elaboren criterios de competencia en la materia para los docentes. Herramientas como los cursos virtuales, los wikis o los mundos virtuales son más que habituales como soporte a la docencia presencial, y en algunos casos, como ocurre con los cursos online masivos y abiertos (\emph{MOOCs}, del inglés \emph{Massive Open Online Courses}), es el único punto de encuentro entre el estudiante y el profesor.
+
+En la mayoría de estas herramientas, la actividad de los estudiantes suele quedar registrada, es decir, accesos al sistema, envío de tareas, comentarios en foros, etc. Según \cite{Chebil:2012, Florian:2011} la recopilación de los rastros de interacción producidos por este tipo de herramientas, con un filtrado adecuado, podría ser una información muy valiosa para obtener indicadores del desempeño de los estudiantes en ciertas competencias. Las técnicas de \emph{Learning Analytics} facilitan la explotación de este tipo de información~\cite{conde2015exploring}. Cómo interactúan, cuándo lo hacen o con qué frecuencia consultan los recursos son cuestiones cuyas respuestas podrían utilizarse como indicadores de algunas competencias.
 
 \subsection*{La educación como una ciencia de diseño}
 \label{sec:dbr}
 
-Sin embargo, evaluar ciertas competencias genéricas es a menudo una tarea subjetiva. A menos que una competencia genérica esté directamente enlazada a una actividad específica, su evaluación requiere de la inventiva y originalidad del profesor para ser capaz, por un lado, de diseñar actividades que obliguen al estudiante a desempeñar las competencias que se quieren evaluar, y por otro lado, diseñar evaluaciones que midan el desempeño real del estudiante en dicha competencia. Comienza Diana Laurillard en su libro \emph{Teaching as a Design Science (La enseñanza como una ciencia de diseño)}~\cite{laurillard2012teaching} comparando la enseñanza con el arte. En ambas, tanto el artista como el profesor han de inspirar y entusiasmar a su audiencia. Los profesores tienen que lograr conectar con sus estudiantes y engancharlos con la temática de estudio. Pero al contrario de lo que ocurre en el arte, donde prácticamente "todo vale'', en la enseñanza hay que ceñirse a una serie de objetivos formales previamente definidos. La enseñanza no es una ciencia teórica que describe y explica algunos aspectos del mundo social y natural, sino una más cercana a otro tipo de ciencias tales como la ingenieria, la informática o la arquitectura, cuyo objetivo es hacer un mundo mejor, es decir, una \emph{ciencia del diseño}. En la ciencia del diseño se parte de la teoría, pero se construyen principios de diseño en lugar de nuevas teorías y se utilizan métodos prácticos en lugar de explicaciones. Su objetivo es ir mejorando con la práctica, basándose en principios y construyendo sobre el trabajo de otros.
+%Sin embargo, evaluar ciertas competencias genéricas es a menudo una tarea subjetiva.
+Una vez que quedase recopilada la información del registro de los sistemas de aprendizaje, habría que plantear como utilizarla para obtener unas evidencias válidas para la evaluación del desempeño de los estudiantes en una o varias competencias genéricas. A menos que una competencia genérica esté directamente enlazada a una actividad específica, su evaluación requiere de la inventiva y originalidad del profesor para ser capaz, por un lado, de diseñar actividades que obliguen al estudiante a desempeñar las competencias que se quieren evaluar, y por otro lado, diseñar evaluaciones que midan el desempeño real del estudiante en dicha competencia. Comienza Diana Laurillard en su libro \emph{Teaching as a Design Science (La enseñanza como una ciencia de diseño)}~\cite{laurillard2012teaching} comparando la enseñanza con el arte. En ambas, tanto el artista como el profesor han de inspirar y entusiasmar a su audiencia. Los profesores tienen que lograr conectar con sus estudiantes y engancharlos con la temática de estudio. Pero al contrario de lo que ocurre en el arte, donde prácticamente "todo vale'', en la enseñanza hay que ceñirse a una serie de objetivos formales previamente definidos. La enseñanza no es una ciencia teórica que describe y explica algunos aspectos del mundo social y natural, sino una más cercana a otro tipo de ciencias tales como la ingenieria, la informática o la arquitectura, cuyo objetivo es hacer un mundo mejor, es decir, una \emph{ciencia del diseño}. En la ciencia del diseño se parte de la teoría, pero se construyen principios de diseño en lugar de nuevas teorías y se utilizan métodos prácticos en lugar de explicaciones. Su objetivo es ir mejorando con la práctica, basándose en principios y construyendo sobre el trabajo de otros.
 
-La idea de que la educación pueda ser tratada como una \emph{ciencia del diseño} viene de la década de los 90, con la ambición de llevar la investigación educacional de los laboratorios a la práctica. Para hacer eso, los investigadores educacionales tenían que enfrentarse a \emph{la complejidad de las situaciones del mundo real y su resistencia al control experimental}~\cite{collins2004design}. La enseñanza se considera una ciencia, pues los investigadores educacionales investigan sobre ella, mientras que los profesores en general no investigan, sino que simplemente desarrollan y comparten teorías y explicaciones basadas en su propia experiencia~\cite{laurillard2012teaching}. Además, cuando un profesor o investigador educacional adopta un método innovador para implementarlo en sus clases, este es absorbido por el proceso normal de enseñanza, de forma que la implementación real puede convertirse en algo muy diferente del diseño original, es decir, hay un abismo entre las investigación y la práctica en la educación formal~\cite{anderson2012design}. 
-
-La metodología de \emph{investigación del diseño} (DBR, del inglés, design-based research) fue concebida para solucionar esta separación entre la teoría y la práctica en la investigación. El DBR, cuyo método práctico principal es el experimento de diseño, es un enfoque de investigación mixto interdisciplinar que se lleva a cabo directamente en el area en la que se aplica y que enriquece también el conocimiento teórico de dicho area~\cite{reimann2011design}. DBR no es una metodología clásicamente experimental, sino iterativa, que se basa en ir refinando progresivamente el diseño inicial basado en la teoría. Según el análisis realizado por Terry Andersen y Julie Shattuck~\cite{anderson2012design}, las características que un estudio DBR de calidad en la educación debe tener son las siguientes:
-
-\begin{itemize}
-\item \emph{Contexto educativo real}: tener lugar en un contexto educativo real avala la validez de la investigación y asegura que los resultados puedan ser efectivamente utilizados para evaluar, informar y mejorar la práctica en, al menos, este contexto y probablemte en otros.
-\item \emph{Enfocado en el diseño y prueba de una intervención significativa}: la selección y la creación de una intervención es una tarea colaborativa que atañe a investigadores y profesores. La creación comienza con un preciso análisis del contexto local; se basa en la literatura relevante, en la teoría y en las prácticas de otros contextos; y se diseña especificamente para solventar un problema o aportar una mejorar en la practica. La intervención podría ser, por ejemplo, una actividad de aprendizaje, un tipo de evaluación, la introducción de una actividad administrativa (como un cambio en las vacaciones) o una intervención tecnológica. % the intervention may be a TYPE OF ASSESSMENT (el nuestro!)
-\item \emph{Empleo de métodos mixtos}: las intervenciones DBR implican la aplicación conjunta de diferentes métodos mediante el empleo de una variedad de herramientas y técnicas de investigación. Los investigadores eligen, utilizan y combinan unos métodos u otros en función de sus necesidades.
-\item \emph{Múltiples iteraciones}: la práctica del diseño suele implicar la creación y prueba de prototipos, refinamiento iterativo y la continua evolución del diseño, de la misma forma que ocurre en otros conocidos procesos de diseño como son, por ejemplo, la fabricación de coches o la moda.
-\item \emph{Asociación colaborativa entre investigadores y profesores}: por una lado, los profesores suelen estar demasiado ocupados y no tienen experiencia para dirigir una investigación rigurosa. Por otro lado, los investigadores suelen carecer de conocimiento de la complejidad cultural, de la tecnología, de los objetivos y de las políticas de un sistema educativo que les permita crear y medir eficientemente el impacto de una intervención. Por tanto, se requiere una asocación para el estudio.
-\item \emph{Evolución de los principios de diseño}: El diseño evoluciona desde y hacia la elaboración de principios de diseño, patrones y teorías funcionales. Estos principios no son diseñados para crear principios o teorías que tengan el mismo efecto en cualquier contexto, sino que sirven para ayudarnos en la comprensión del contexto y la intervención, y nos ayuden para ajustar ambos y así maximizar el aprendizaje.  El desarrollo de principios de diseño prácticos es una parte fundamental del DBR, y pone en desventaja a aquellos tipos de investigación que unilateralmente comienzan con las pruebas en clase y después desaparecen con el investigador una vez que el experimento ha concluido.
-\item \emph{Comparación con la investigación-acción}: Tanto los profesores como los investigadores encuentran a menudo confuso diferenciar entre DBR e investigación-acción. Sin embargo, aunque ambas metodologías se sitúan dentro del campo de la investigación aplicada, difieren en características principales. Mientras que la investigación-acción se concibe principalmente para alcanzar una serie de objetivos a nivel local, en DBR se pretende también evolucionar a nivel teórico, maximizando la generalización y el entendimiento en la comprensión de aplicaciones prácticas. Además, la investigación-acción es llevada a cabo normalmente por un solo profesor, por lo que no se beneficia de la experiencia y la energía que caracterizan a los equipos de investigación y diseño DBR.
-\item \emph{Impacto práctico en las prácticas}: El DBR no debe avanzar únicamente en el campo teórico, sino que para demostrar y justificar su valor real deberá ser además implementado en un contexto de estudio local.
-\end{itemize}
 
 \subsection*{Conclusión}
 
-Es obligatorio para los profesores hoy en día abordar la evaluación de competencias genéricas ya que así se lo demanda la sociedad. Cconsiderando la miríada de herramientas que los profesores tienen a su disposición en clase y que en estas se refleja la actividad de los estudiantes, se concluye que una posible solución sería aprovechar los indicadores obtenidos de estas herramientas como evidencias del desempeño de competencias genéricas. Para lograrlo se indican a continuación las dos principales contribuciones de esta tesis:
+Los planes de estudio actuales demandan a los profesores la evaluación de competencias genéricas de su alumnado. Considerando la miríada de herramientas que los profesores tienen a su disposición en clase y que en estas se refleja la actividad de los estudiantes, se concluye que una posible solución sería aprovechar los indicadores obtenidos de estas herramientas como evidencias del desempeño de competencias genéricas. Para lograrlo se indican a continuación las dos principales contribuciones de esta tesis:
 \begin{enumerate}
-\item Un método para aplicar DBR en la evaluación de competencias genéricas de los estudiantes a partir de indicadores procedentes de los registros de actividades de aprendizaje
-\item Una herramienta informática para aplicar el método.
+\item Un método para aplicar la ciencia del diseño en la evaluación de competencias genéricas de los estudiantes a partir de indicadores procedentes de los registros de actividades de aprendizaje
+\item Herramientas informáticas que automaticen y den soporte a la aplicación del método.
 \end{enumerate} 
